# playintel

./: .gitignore  ADDITIONAL_DATA_SOURCES.md  BACKEND_ANALYSIS_AI_INTEGRATION.md  BENCHMARKING_RESULTS.md  BENCHMARK_IMPROVEMENTS.md  BENCHMARK_TEST_GUIDE.md  BOOKS_TRAINING_GUIDE.md  COLUMN_ORIGINS_BREAKDOWN.md  CONSISTENCY_FIX.md  CURRENT_ETL_PIPELINE_SUMMARY.md  DATA_COLUMNS_REFERENCE.md  ENRICHMENT_UPDATE_SUMMARY.md  FINAL_UX_UPDATE.md  FIX_TIMEOUTS.md  PRODUCTION_READINESS_REPORT.md  README.md  STEAMSPY_MISSING_COLUMNS.md  TEST_FRAMEWORK_GUIDE.md  USE_CASES_AND_AGGREGATE_TABLES.md  UX_IMPROVEMENTS_APPLIED.md  add_missing_columns.sql  benchmark_results.json  books_requirements.txt  cleanup_low_coverage_columns.py  create_aggregate_tables.sql  create_users_table.sql  create_waitlist_table.sql  etl_steam_data.py  monitor_tests.sh  populate_aggregate_tables.py  test_benchmark_comparison.py  test_comprehensive_ux.py  test_playintel.py  test_production_readiness.py  test_report.txt  test_results.json  test_ux_fixes.py  train_from_books.py  ux_test_results.json  verify_aggregate_tables.py
agent-eval/: README.md  agent_policy.md  pyproject.toml  requirements.txt  run_eval.py
agent-eval/configs/: eval_config.yaml
agent-eval/prompts/: test_scenarios.json
agent-eval/reports/: eval_agent_a_20260204_204436.json  eval_agent_a_20260204_204524.json  eval_agent_a_20260204_204543.json  eval_agent_a_20260204_204624.json  eval_agent_b_20260204_204436.json  eval_agent_b_20260204_204524.json  eval_agent_b_20260204_204543.json  eval_agent_b_20260204_204624.json  (+2 more)
backend/: .env.example  (+4 more)
(+47 files in other folders)
